UIP-977 --> IE10 fix for pressing enter in search field w modal; UIP-1072, ID-5034 --> Animation for textarea when resizing is lagging behind

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -80,6 +80,10 @@ textarea {
     &[disabled] {
         resize: none !important;
     }
+    // being resized
+    &[style] {
+        @include transition(none);
+    }
 }
 
 label {
